# bitcoin-autotools

./: README.md  configure.ac  project.config
src/: Makefile.am  bignum.cpp  bignum.h  bitcoin-config.h  bitcoind.cpp  chainparams.cpp  chainparams.h  core.h  init.cpp  script.cpp  script.h  uint256.h  util.cpp  util.h
